8220153: Shenandoah does not work with TransparentHugePages properly

Reviewed-by: rkennke, zgu